# galpynostatic

./: .clang-format  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.bib  LICENSE  MANIFEST.in  README.md  TODO.md  map.cpp  map.py  profile.cpp  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: CD.yml  CI.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  galpynostatic.datasets.rst  galpynostatic.rst  index.rst  install.rst  modules.rst  tutorial.ipynb
docs/source/_static/: 0.2C.csv  0.5C.csv  1.0C.csv  10.0C.csv  2.0C.csv  5.0C.csv  benchmarking_experimental_data.csv
docs/source/api/: api.rst  base.rst  datasets.rst  datasets_params.rst  dev_base_modules.rst  index.rst  make_prediction.rst  metric.rst  model.rst  modules.rst  plot.rst  preprocessing.rst  simulation.rst  submodules.rst  utils.rst
docs/source/tutorial/: LCO.ipynb  LFP.ipynb  LMNO.ipynb  LMO.ipynb  LTO.ipynb  NATURAL_GRAPHITE.ipynb  index.rst  quickstart.ipynb
docs/source/tutorials/: benchmarking_metrics.ipynb  heuristic_model.ipynb  index.rst  map-driven_analysis.ipynb  model_evaluation.ipynb  model_fitting.ipynb
examples/: AMORPHOUS_GRAPHITE.ipynb  LCO.ipynb  LFP.ipynb  LMNO.ipynb  LMO.ipynb  LTO.ipynb  NATURAL_GRAPHITE.ipynb  README.md  amorphous_graphite.ipynb
examples/LMNO/: 10nA-simulated.csv  10nA.csv  1nA-simulated.csv  2nA-simulated.csv  3nA-simulated.csv  5nA-simulated.csv  README.md  fit.py  nishikawa.ipynb
examples/LMNO/data/: 10nA-simulated.csv  2nA.csv  3nA.csv
examples/data/: mancini.csv
examples/data/bak/: 20C.csv  5C.csv
examples/data/he/: 2C.csv
examples/data/lei/: 10C.csv  1C.csv  20C.csv
examples/data/nishikawa/: 1nA.csv
examples/data/wang/: 0.5C.csv  10C.csv  2C.csv  5C.csv
galpynostatic/: __init__.py  _surface.py  base.py  core.py  make_prediction.py  metric.py  model.py  plot.py  predict.py  preprocessing.py  simulation.py  size.py  surface.py  utils.py
galpynostatic/datasets/: __init__.py  cylindrical.csv  cylindrical.tsv  map.py  params.py  params.yml  planar.csv  planar.tsv  spherical.csv  spherical.tsv
galpynostatic/lib/: __init__.py  map.cpp  profile.cpp
nishikawa/: 5nA.csv  fit.py  nishikawa.ipynb
paper/: pipeline.ipynb
papers/: benchmarking_dataset.csv  towards.ipynb
tests/: conftest.py  test_base.py  test_datasets.py  test_lib.py  test_make_prediction.py  test_metric.py  test_model.py  test_params.py  test_plot.py  test_predict.py  test_preprocessing.py  test_simulations.py  test_size.py  test_utils.py
tests/test_data/: metric_dataset.csv
tests/test_data/GRAPHITE/: df.csv
tests/test_data/LCO/: 1C.csv  20C.csv  df.csv
tests/test_data/LFP/: 0.2C.csv  0.5C.csv  2C.csv  5C.csv  df.csv
tests/test_data/LMNO/: df.csv
tests/test_data/LMO/: 100C.csv  10C.csv  1C.csv  50C.csv  df.csv
tests/test_data/LTO/: 0.1C.csv  0.5C.csv  1C.csv  5C.csv  df.csv
tests/test_data/NATURAL_GRAPHITE/: df.csv
tests/test_data/simulations/: LMO-1C.csv  con.csv  map.csv  map_iso.csv  profile.csv  profile_iso.csv
