# =============================================================================
# PACKAGING
# =============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "galpynostatic"
version = "0.1.0"
authors = [{name = "Francisco Fernandez", email = "ffernandev@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "A physics-based heuristic model to predict the optimal electrode particle size for a fast-charging of lithium-ion batteries."
keywords = [
    "battery",
    "physics-based",
    "data-driven",
    "heuristic-algorithm",
    "regression-models",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
urls = { Homepage = "https://github.com/fernandezfran/galpynostatic" }
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "importlib_metadata",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["galpynostatic", "galpynostatic.*"]
namespaces = false

[tool.black]
line-length = 79
target-version = ["py39"]
