[tool.black]
line-length = 79
target-version = ["py39"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::RuntimeWarning"]

# =============================================================================
# PACKAGING
# =============================================================================

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "galpynostatic"
version = "0.4.0"
authors = [{name = "Francisco Fernandez", email = "ffernandev@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
description = "A Python package with physics-based models to predict optimal conditions for fast-charging lithium-ion batteries."
keywords = [
    "battery",
    "physics-based",
    "data-driven",
    "heuristic-algorithm",
    "regression-models",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
urls = { Homepage = "https://github.com/fernandezfran/galpynostatic" }
dependencies = [
    "importlib_metadata",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["galpynostatic", "galpynostatic.*"]
namespaces = false
